// file: pkg/cache/proto/requests/transaction_request.proto
edition = "2023";

package gcommon.v1.cache;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";

option go_package = "../../../../pkg/cache/pb;cachepb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Request to execute multiple cache operations in a transaction.
 */
message TransactionRequest {
  // Encoded operations in transaction
  bytes operations = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
